infras/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: order-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: order-app.com
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: client-app-service
          servicePort: 3000
      - path: /api/v1/orders/?(.*)
        backend:
          serviceName: order-app-service
          servicePort: 8000
      - path: /api/v1/payments/?(.*)
        backend:
          serviceName: payment-app-service
          servicePort: 8001
